examples/test/testpolicy6580.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6580
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key48: value41
      key2: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value32
          key11: value34
      podSelector:
        matchLabels:
          key15: value19
          key3: value38
          key1: value34
